parser.out
Created by PLY version 3.3 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> BEGIN nContent nStructure END
Rule 2     nContent -> CONTENT LBRACE nNewspaper blocks RBRACE
Rule 3     nNewspaper -> NEWSPAPER LBRACE nTitle nDate RBRACE
Rule 4     blocks -> blocks block
Rule 5     blocks -> block
Rule 6     block -> NAME LBRACE cblock RBRACE
Rule 7     cblock -> cblock ccblock
Rule 8     cblock -> ccblock
Rule 9     ccblock -> nTitle
Rule 10    ccblock -> nDate
Rule 11    ccblock -> nAbstract
Rule 12    ccblock -> nImage
Rule 13    ccblock -> nSource
Rule 14    ccblock -> nAuthor
Rule 15    ccblock -> nText
Rule 16    nTitle -> TITLE COLON noWikiText
Rule 17    nDate -> DATE COLON noWikiText
Rule 18    nAbstract -> ABSTRACT COLON noWikiText
Rule 19    nImage -> IMAGE COLON POINT BAR noWikiText POINT PHOTO_EXT
Rule 20    nSource -> SOURCE COLON noWikiText
Rule 21    nSource -> SOURCE COLON URL
Rule 22    nAuthor -> AUTHOR COLON noWikiText
Rule 23    nText -> TEXT COLON wikiText
Rule 24    wText -> NAME
Rule 25    wText -> WORD
Rule 26    wText -> POINT
Rule 27    wText -> COLON
Rule 28    wText -> LPAREN
Rule 29    wText -> RPAREN
Rule 30    wText -> BAR
Rule 31    wText -> NUMBER
Rule 32    wText -> COMMA
Rule 33    wText -> QUOTE
Rule 34    wText -> DQUOTE
Rule 35    wText -> DASH
Rule 36    wText -> link
Rule 37    wText -> session
Rule 38    wText -> indent
Rule 39    wikiText -> wikiText wText
Rule 40    wikiText -> wText
Rule 41    noWText -> NAME
Rule 42    noWText -> WORD
Rule 43    noWText -> POINT
Rule 44    noWText -> COLON
Rule 45    noWText -> LPAREN
Rule 46    noWText -> RPAREN
Rule 47    noWText -> BAR
Rule 48    noWText -> NUMBER
Rule 49    noWText -> COMMA
Rule 50    noWText -> QUOTE
Rule 51    noWText -> DQUOTE
Rule 52    noWText -> DASH
Rule 53    noWikiText -> noWikiText noWText
Rule 54    noWikiText -> noWText
Rule 55    link -> LBRACK URL PIPE noWikiText RBRACK
Rule 56    session -> SESSION_EQUAL nSession EQUAL
Rule 57    nSession -> EQUAL nSession EQUAL
Rule 58    nSession -> wikiText
Rule 59    indent -> INDENT_COLON nIndent
Rule 60    nIndent -> COLON nIndent
Rule 61    nIndent -> wikiText
Rule 62    nStructure -> STRUCTURE LBRACE nFormat nItems RBRACE
Rule 63    nFormat -> FORMAT LBRACE nCol nBorder RBRACE
Rule 64    nCol -> COL COLON NUMBER
Rule 65    nBorder -> BORDER COLON NUMBER
Rule 66    nItems -> nItems nItem
Rule 67    nItems -> nItem
Rule 68    nItem -> ITEM LBRACK range RBRACK LBRACE define_item RBRACE
Rule 69    range -> NUMBER COLON NUMBER
Rule 70    range -> NUMBER
Rule 71    define_item -> define_item ditem
Rule 72    define_item -> ditem
Rule 73    ditem -> NAME POINT TITLE
Rule 74    ditem -> NAME POINT ABSTRACT
Rule 75    ditem -> NAME POINT IMAGE
Rule 76    ditem -> NAME POINT SOURCE
Rule 77    ditem -> NAME POINT DATE
Rule 78    ditem -> NAME POINT AUTHOR
Rule 79    ditem -> NAME POINT TEXT

Terminals, with rules where they appear

ABSTRACT             : 18 74
AUTHOR               : 22 78
BAR                  : 19 30 47
BEGIN                : 1
BORDER               : 65
COL                  : 64
COLON                : 16 17 18 19 20 21 22 23 27 44 60 64 65 69
COMMA                : 32 49
CONTENT              : 2
DASH                 : 35 52
DATE                 : 17 77
DQUOTE               : 34 51
END                  : 1
EQUAL                : 56 57 57
FORMAT               : 63
IMAGE                : 19 75
INDENT_COLON         : 59
ITEM                 : 68
LBRACE               : 2 3 6 62 63 68
LBRACK               : 55 68
LPAREN               : 28 45
NAME                 : 6 24 41 73 74 75 76 77 78 79
NEWSPAPER            : 3
NUMBER               : 31 48 64 65 69 69 70
PHOTO_EXT            : 19
PIPE                 : 55
POINT                : 19 19 26 43 73 74 75 76 77 78 79
QUOTE                : 33 50
RBRACE               : 2 3 6 62 63 68
RBRACK               : 55 68
RPAREN               : 29 46
SESSION_EQUAL        : 56
SOURCE               : 20 21 76
STRUCTURE            : 62
TEXT                 : 23 79
TITLE                : 16 73
URL                  : 21 55
WORD                 : 25 42
error                : 

Nonterminals, with rules where they appear

block                : 4 5
blocks               : 2 4
cblock               : 6 7
ccblock              : 7 8
define_item          : 68 71
ditem                : 71 72
indent               : 38
link                 : 36
nAbstract            : 11
nAuthor              : 14
nBorder              : 63
nCol                 : 63
nContent             : 1
nDate                : 3 10
nFormat              : 62
nImage               : 12
nIndent              : 59 60
nItem                : 66 67
nItems               : 62 66
nNewspaper           : 2
nSession             : 56 57
nSource              : 13
nStructure           : 1
nText                : 15
nTitle               : 3 9
noWText              : 53 54
noWikiText           : 16 17 18 19 20 22 53 55
range                : 68
session              : 37
statement            : 0
wText                : 39 40
wikiText             : 23 39 58 61

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . BEGIN nContent nStructure END

    BEGIN           shift and go to state 1

    statement                      shift and go to state 2

state 1

    (1) statement -> BEGIN . nContent nStructure END
    (2) nContent -> . CONTENT LBRACE nNewspaper blocks RBRACE

    CONTENT         shift and go to state 4

    nContent                       shift and go to state 3

state 2

    (0) S' -> statement .



state 3

    (1) statement -> BEGIN nContent . nStructure END
    (62) nStructure -> . STRUCTURE LBRACE nFormat nItems RBRACE

    STRUCTURE       shift and go to state 6

    nStructure                     shift and go to state 5

state 4

    (2) nContent -> CONTENT . LBRACE nNewspaper blocks RBRACE

    LBRACE          shift and go to state 7


state 5

    (1) statement -> BEGIN nContent nStructure . END

    END             shift and go to state 8


state 6

    (62) nStructure -> STRUCTURE . LBRACE nFormat nItems RBRACE

    LBRACE          shift and go to state 9


state 7

    (2) nContent -> CONTENT LBRACE . nNewspaper blocks RBRACE
    (3) nNewspaper -> . NEWSPAPER LBRACE nTitle nDate RBRACE

    NEWSPAPER       shift and go to state 11

    nNewspaper                     shift and go to state 10

state 8

    (1) statement -> BEGIN nContent nStructure END .

    $end            reduce using rule 1 (statement -> BEGIN nContent nStructure END .)


state 9

    (62) nStructure -> STRUCTURE LBRACE . nFormat nItems RBRACE
    (63) nFormat -> . FORMAT LBRACE nCol nBorder RBRACE

    FORMAT          shift and go to state 12

    nFormat                        shift and go to state 13

state 10

    (2) nContent -> CONTENT LBRACE nNewspaper . blocks RBRACE
    (4) blocks -> . blocks block
    (5) blocks -> . block
    (6) block -> . NAME LBRACE cblock RBRACE

    NAME            shift and go to state 16

    blocks                         shift and go to state 14
    block                          shift and go to state 15

state 11

    (3) nNewspaper -> NEWSPAPER . LBRACE nTitle nDate RBRACE

    LBRACE          shift and go to state 17


state 12

    (63) nFormat -> FORMAT . LBRACE nCol nBorder RBRACE

    LBRACE          shift and go to state 18


state 13

    (62) nStructure -> STRUCTURE LBRACE nFormat . nItems RBRACE
    (66) nItems -> . nItems nItem
    (67) nItems -> . nItem
    (68) nItem -> . ITEM LBRACK range RBRACK LBRACE define_item RBRACE

    ITEM            shift and go to state 20

    nItems                         shift and go to state 19
    nItem                          shift and go to state 21

state 14

    (2) nContent -> CONTENT LBRACE nNewspaper blocks . RBRACE
    (4) blocks -> blocks . block
    (6) block -> . NAME LBRACE cblock RBRACE

    RBRACE          shift and go to state 22
    NAME            shift and go to state 16

    block                          shift and go to state 23

state 15

    (5) blocks -> block .

    RBRACE          reduce using rule 5 (blocks -> block .)
    NAME            reduce using rule 5 (blocks -> block .)


state 16

    (6) block -> NAME . LBRACE cblock RBRACE

    LBRACE          shift and go to state 24


state 17

    (3) nNewspaper -> NEWSPAPER LBRACE . nTitle nDate RBRACE
    (16) nTitle -> . TITLE COLON noWikiText

    TITLE           shift and go to state 26

    nTitle                         shift and go to state 25

state 18

    (63) nFormat -> FORMAT LBRACE . nCol nBorder RBRACE
    (64) nCol -> . COL COLON NUMBER

    COL             shift and go to state 28

    nCol                           shift and go to state 27

state 19

    (62) nStructure -> STRUCTURE LBRACE nFormat nItems . RBRACE
    (66) nItems -> nItems . nItem
    (68) nItem -> . ITEM LBRACK range RBRACK LBRACE define_item RBRACE

    RBRACE          shift and go to state 29
    ITEM            shift and go to state 20

    nItem                          shift and go to state 30

state 20

    (68) nItem -> ITEM . LBRACK range RBRACK LBRACE define_item RBRACE

    LBRACK          shift and go to state 31


state 21

    (67) nItems -> nItem .

    RBRACE          reduce using rule 67 (nItems -> nItem .)
    ITEM            reduce using rule 67 (nItems -> nItem .)


state 22

    (2) nContent -> CONTENT LBRACE nNewspaper blocks RBRACE .

    STRUCTURE       reduce using rule 2 (nContent -> CONTENT LBRACE nNewspaper blocks RBRACE .)


state 23

    (4) blocks -> blocks block .

    RBRACE          reduce using rule 4 (blocks -> blocks block .)
    NAME            reduce using rule 4 (blocks -> blocks block .)


state 24

    (6) block -> NAME LBRACE . cblock RBRACE
    (7) cblock -> . cblock ccblock
    (8) cblock -> . ccblock
    (9) ccblock -> . nTitle
    (10) ccblock -> . nDate
    (11) ccblock -> . nAbstract
    (12) ccblock -> . nImage
    (13) ccblock -> . nSource
    (14) ccblock -> . nAuthor
    (15) ccblock -> . nText
    (16) nTitle -> . TITLE COLON noWikiText
    (17) nDate -> . DATE COLON noWikiText
    (18) nAbstract -> . ABSTRACT COLON noWikiText
    (19) nImage -> . IMAGE COLON POINT BAR noWikiText POINT PHOTO_EXT
    (20) nSource -> . SOURCE COLON noWikiText
    (21) nSource -> . SOURCE COLON URL
    (22) nAuthor -> . AUTHOR COLON noWikiText
    (23) nText -> . TEXT COLON wikiText

    TITLE           shift and go to state 26
    DATE            shift and go to state 34
    ABSTRACT        shift and go to state 33
    IMAGE           shift and go to state 37
    SOURCE          shift and go to state 41
    AUTHOR          shift and go to state 44
    TEXT            shift and go to state 32

    nTitle                         shift and go to state 35
    nImage                         shift and go to state 40
    nAuthor                        shift and go to state 39
    nAbstract                      shift and go to state 36
    ccblock                        shift and go to state 45
    nSource                        shift and go to state 46
    cblock                         shift and go to state 42
    nText                          shift and go to state 38
    nDate                          shift and go to state 43

state 25

    (3) nNewspaper -> NEWSPAPER LBRACE nTitle . nDate RBRACE
    (17) nDate -> . DATE COLON noWikiText

    DATE            shift and go to state 34

    nDate                          shift and go to state 47

state 26

    (16) nTitle -> TITLE . COLON noWikiText

    COLON           shift and go to state 48


state 27

    (63) nFormat -> FORMAT LBRACE nCol . nBorder RBRACE
    (65) nBorder -> . BORDER COLON NUMBER

    BORDER          shift and go to state 50

    nBorder                        shift and go to state 49

state 28

    (64) nCol -> COL . COLON NUMBER

    COLON           shift and go to state 51


state 29

    (62) nStructure -> STRUCTURE LBRACE nFormat nItems RBRACE .

    END             reduce using rule 62 (nStructure -> STRUCTURE LBRACE nFormat nItems RBRACE .)


state 30

    (66) nItems -> nItems nItem .

    RBRACE          reduce using rule 66 (nItems -> nItems nItem .)
    ITEM            reduce using rule 66 (nItems -> nItems nItem .)


state 31

    (68) nItem -> ITEM LBRACK . range RBRACK LBRACE define_item RBRACE
    (69) range -> . NUMBER COLON NUMBER
    (70) range -> . NUMBER

    NUMBER          shift and go to state 52

    range                          shift and go to state 53

state 32

    (23) nText -> TEXT . COLON wikiText

    COLON           shift and go to state 54


state 33

    (18) nAbstract -> ABSTRACT . COLON noWikiText

    COLON           shift and go to state 55


state 34

    (17) nDate -> DATE . COLON noWikiText

    COLON           shift and go to state 56


state 35

    (9) ccblock -> nTitle .

    RBRACE          reduce using rule 9 (ccblock -> nTitle .)
    TITLE           reduce using rule 9 (ccblock -> nTitle .)
    DATE            reduce using rule 9 (ccblock -> nTitle .)
    ABSTRACT        reduce using rule 9 (ccblock -> nTitle .)
    IMAGE           reduce using rule 9 (ccblock -> nTitle .)
    SOURCE          reduce using rule 9 (ccblock -> nTitle .)
    AUTHOR          reduce using rule 9 (ccblock -> nTitle .)
    TEXT            reduce using rule 9 (ccblock -> nTitle .)


state 36

    (11) ccblock -> nAbstract .

    RBRACE          reduce using rule 11 (ccblock -> nAbstract .)
    TITLE           reduce using rule 11 (ccblock -> nAbstract .)
    DATE            reduce using rule 11 (ccblock -> nAbstract .)
    ABSTRACT        reduce using rule 11 (ccblock -> nAbstract .)
    IMAGE           reduce using rule 11 (ccblock -> nAbstract .)
    SOURCE          reduce using rule 11 (ccblock -> nAbstract .)
    AUTHOR          reduce using rule 11 (ccblock -> nAbstract .)
    TEXT            reduce using rule 11 (ccblock -> nAbstract .)


state 37

    (19) nImage -> IMAGE . COLON POINT BAR noWikiText POINT PHOTO_EXT

    COLON           shift and go to state 57


state 38

    (15) ccblock -> nText .

    RBRACE          reduce using rule 15 (ccblock -> nText .)
    TITLE           reduce using rule 15 (ccblock -> nText .)
    DATE            reduce using rule 15 (ccblock -> nText .)
    ABSTRACT        reduce using rule 15 (ccblock -> nText .)
    IMAGE           reduce using rule 15 (ccblock -> nText .)
    SOURCE          reduce using rule 15 (ccblock -> nText .)
    AUTHOR          reduce using rule 15 (ccblock -> nText .)
    TEXT            reduce using rule 15 (ccblock -> nText .)


state 39

    (14) ccblock -> nAuthor .

    RBRACE          reduce using rule 14 (ccblock -> nAuthor .)
    TITLE           reduce using rule 14 (ccblock -> nAuthor .)
    DATE            reduce using rule 14 (ccblock -> nAuthor .)
    ABSTRACT        reduce using rule 14 (ccblock -> nAuthor .)
    IMAGE           reduce using rule 14 (ccblock -> nAuthor .)
    SOURCE          reduce using rule 14 (ccblock -> nAuthor .)
    AUTHOR          reduce using rule 14 (ccblock -> nAuthor .)
    TEXT            reduce using rule 14 (ccblock -> nAuthor .)


state 40

    (12) ccblock -> nImage .

    RBRACE          reduce using rule 12 (ccblock -> nImage .)
    TITLE           reduce using rule 12 (ccblock -> nImage .)
    DATE            reduce using rule 12 (ccblock -> nImage .)
    ABSTRACT        reduce using rule 12 (ccblock -> nImage .)
    IMAGE           reduce using rule 12 (ccblock -> nImage .)
    SOURCE          reduce using rule 12 (ccblock -> nImage .)
    AUTHOR          reduce using rule 12 (ccblock -> nImage .)
    TEXT            reduce using rule 12 (ccblock -> nImage .)


state 41

    (20) nSource -> SOURCE . COLON noWikiText
    (21) nSource -> SOURCE . COLON URL

    COLON           shift and go to state 58


state 42

    (6) block -> NAME LBRACE cblock . RBRACE
    (7) cblock -> cblock . ccblock
    (9) ccblock -> . nTitle
    (10) ccblock -> . nDate
    (11) ccblock -> . nAbstract
    (12) ccblock -> . nImage
    (13) ccblock -> . nSource
    (14) ccblock -> . nAuthor
    (15) ccblock -> . nText
    (16) nTitle -> . TITLE COLON noWikiText
    (17) nDate -> . DATE COLON noWikiText
    (18) nAbstract -> . ABSTRACT COLON noWikiText
    (19) nImage -> . IMAGE COLON POINT BAR noWikiText POINT PHOTO_EXT
    (20) nSource -> . SOURCE COLON noWikiText
    (21) nSource -> . SOURCE COLON URL
    (22) nAuthor -> . AUTHOR COLON noWikiText
    (23) nText -> . TEXT COLON wikiText

    RBRACE          shift and go to state 59
    TITLE           shift and go to state 26
    DATE            shift and go to state 34
    ABSTRACT        shift and go to state 33
    IMAGE           shift and go to state 37
    SOURCE          shift and go to state 41
    AUTHOR          shift and go to state 44
    TEXT            shift and go to state 32

    nTitle                         shift and go to state 35
    nImage                         shift and go to state 40
    nAuthor                        shift and go to state 39
    nAbstract                      shift and go to state 36
    ccblock                        shift and go to state 60
    nSource                        shift and go to state 46
    nText                          shift and go to state 38
    nDate                          shift and go to state 43

state 43

    (10) ccblock -> nDate .

    RBRACE          reduce using rule 10 (ccblock -> nDate .)
    TITLE           reduce using rule 10 (ccblock -> nDate .)
    DATE            reduce using rule 10 (ccblock -> nDate .)
    ABSTRACT        reduce using rule 10 (ccblock -> nDate .)
    IMAGE           reduce using rule 10 (ccblock -> nDate .)
    SOURCE          reduce using rule 10 (ccblock -> nDate .)
    AUTHOR          reduce using rule 10 (ccblock -> nDate .)
    TEXT            reduce using rule 10 (ccblock -> nDate .)


state 44

    (22) nAuthor -> AUTHOR . COLON noWikiText

    COLON           shift and go to state 61


state 45

    (8) cblock -> ccblock .

    RBRACE          reduce using rule 8 (cblock -> ccblock .)
    TITLE           reduce using rule 8 (cblock -> ccblock .)
    DATE            reduce using rule 8 (cblock -> ccblock .)
    ABSTRACT        reduce using rule 8 (cblock -> ccblock .)
    IMAGE           reduce using rule 8 (cblock -> ccblock .)
    SOURCE          reduce using rule 8 (cblock -> ccblock .)
    AUTHOR          reduce using rule 8 (cblock -> ccblock .)
    TEXT            reduce using rule 8 (cblock -> ccblock .)


state 46

    (13) ccblock -> nSource .

    RBRACE          reduce using rule 13 (ccblock -> nSource .)
    TITLE           reduce using rule 13 (ccblock -> nSource .)
    DATE            reduce using rule 13 (ccblock -> nSource .)
    ABSTRACT        reduce using rule 13 (ccblock -> nSource .)
    IMAGE           reduce using rule 13 (ccblock -> nSource .)
    SOURCE          reduce using rule 13 (ccblock -> nSource .)
    AUTHOR          reduce using rule 13 (ccblock -> nSource .)
    TEXT            reduce using rule 13 (ccblock -> nSource .)


state 47

    (3) nNewspaper -> NEWSPAPER LBRACE nTitle nDate . RBRACE

    RBRACE          shift and go to state 62


state 48

    (16) nTitle -> TITLE COLON . noWikiText
    (53) noWikiText -> . noWikiText noWText
    (54) noWikiText -> . noWText
    (41) noWText -> . NAME
    (42) noWText -> . WORD
    (43) noWText -> . POINT
    (44) noWText -> . COLON
    (45) noWText -> . LPAREN
    (46) noWText -> . RPAREN
    (47) noWText -> . BAR
    (48) noWText -> . NUMBER
    (49) noWText -> . COMMA
    (50) noWText -> . QUOTE
    (51) noWText -> . DQUOTE
    (52) noWText -> . DASH

    NAME            shift and go to state 64
    WORD            shift and go to state 63
    POINT           shift and go to state 68
    COLON           shift and go to state 73
    LPAREN          shift and go to state 74
    RPAREN          shift and go to state 75
    BAR             shift and go to state 67
    NUMBER          shift and go to state 69
    COMMA           shift and go to state 76
    QUOTE           shift and go to state 66
    DQUOTE          shift and go to state 70
    DASH            shift and go to state 71

    noWText                        shift and go to state 72
    noWikiText                     shift and go to state 65

state 49

    (63) nFormat -> FORMAT LBRACE nCol nBorder . RBRACE

    RBRACE          shift and go to state 77


state 50

    (65) nBorder -> BORDER . COLON NUMBER

    COLON           shift and go to state 78


state 51

    (64) nCol -> COL COLON . NUMBER

    NUMBER          shift and go to state 79


state 52

    (69) range -> NUMBER . COLON NUMBER
    (70) range -> NUMBER .

    COLON           shift and go to state 80
    RBRACK          reduce using rule 70 (range -> NUMBER .)


state 53

    (68) nItem -> ITEM LBRACK range . RBRACK LBRACE define_item RBRACE

    RBRACK          shift and go to state 81


state 54

    (23) nText -> TEXT COLON . wikiText
    (39) wikiText -> . wikiText wText
    (40) wikiText -> . wText
    (24) wText -> . NAME
    (25) wText -> . WORD
    (26) wText -> . POINT
    (27) wText -> . COLON
    (28) wText -> . LPAREN
    (29) wText -> . RPAREN
    (30) wText -> . BAR
    (31) wText -> . NUMBER
    (32) wText -> . COMMA
    (33) wText -> . QUOTE
    (34) wText -> . DQUOTE
    (35) wText -> . DASH
    (36) wText -> . link
    (37) wText -> . session
    (38) wText -> . indent
    (55) link -> . LBRACK URL PIPE noWikiText RBRACK
    (56) session -> . SESSION_EQUAL nSession EQUAL
    (59) indent -> . INDENT_COLON nIndent

    NAME            shift and go to state 100
    WORD            shift and go to state 86
    POINT           shift and go to state 87
    COLON           shift and go to state 90
    LPAREN          shift and go to state 96
    RPAREN          shift and go to state 97
    BAR             shift and go to state 82
    NUMBER          shift and go to state 83
    COMMA           shift and go to state 91
    QUOTE           shift and go to state 88
    DQUOTE          shift and go to state 89
    DASH            shift and go to state 94
    LBRACK          shift and go to state 101
    SESSION_EQUAL   shift and go to state 85
    INDENT_COLON    shift and go to state 98
